# native-file-tests

./: .gitignore  .travis.yml  LICENSE  README.md  SConstruct  appveyor.yml  dist-all.sh  dist.py  dist.sh  index.html  index.json
checksums/: native-file-tests-0.1.0.zip.sha1  native-file-tests-0.2.0.zip.sha1
java-binding/: pom.xml
java-binding/src/main/java/net/libudi/nativefiletests/: NativeFileMetadata.java  NativeFileTestsInfo.java
java-binding/src/test/java/net/libudi/nativefiletests/: NativeFileTestsInfoTest.java
rust-binding/: .gitignore  Cargo.toml
rust-binding/src/: lib.rs
rust-binding/tests/: setup.rs
src/: SConscript  basic.c  bin_lib.c  bin_lib.h  bin_lib_darwin.c  bin_lib_win.c  signal-posix.c  simple.c  sources.json  waitthread-posix.c  workerthreads-posix.c  workerthreads-win.c
