[package]
description = "A library for working with the binaries in the native-file-tests distribution."
homepage = "https://github.com/dxdbg/native-file-tests"
repository = "https://github.com/dxdbg/native-file-tests.git"
license = "MPL-2.0"
name = "native-file-tests"
version = "0.1.0"
authors = ["Dan McNulty <mcnulty@users.noreply.github.com>"]
edition = "2021"

[dependencies]
goblin = "0.7.1"
serde =  "1.0"
serde_derive = "1.0"
serde_json = "1.0"
pdb = "0.8.0"
thiserror = "1.0.48"
